nixidy/generated/prod/kosync/Deployment-kosync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: kosync
    app.kubernetes.io/instance: kosync
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kosync
  name: kosync
  namespace: home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: kosync
      app.kubernetes.io/instance: kosync
      app.kubernetes.io/name: kosync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: kosync
        app.kubernetes.io/instance: kosync
        app.kubernetes.io/name: kosync
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - serve
          image: szaffarano/korrosync:v0.3.0@sha256:5689cd5f7d722bdaf525265e66e4a51759e513f0db4d45d7aaa133c593d31c25
          livenessProbe:
            tcpSocket:
              port: http
          name: kosync
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            tcpSocket:
              port: http
          startupProbe:
            failureThreshold: 30
            periodSeconds: 10
            tcpSocket:
              port: http
          volumeMounts:
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: kosync
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kosync
