nixidy/generated/prod/kosync/HTTPRoute-kosync.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kosync
  namespace: home
spec:
  hostnames:
    - kosync.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kosync
          port: 3000
